# cm-hft

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  README.md  TASKS.md  docker-compose.yml  pyproject.toml  rustfmt.toml
.beads/: issues.jsonl
.github/workflows/: ci.yml
backtest/: __init__.py
backtest/data/: __init__.py  download.py  export.py  validate.py
backtest/engine/: __init__.py  analytics.py  latency_analysis.py  orchestrator.py  walk_forward.py
backtest/notebooks/: 01_data_exploration.py  02_backtest_single.py  03_parameter_sweep.py  04_walk_forward.py  05_latency_analysis.py
backtest/tests/: test_backtest_engine.py  test_backtesting.py  test_data_pipeline.py  test_smoke.py  test_walk_forward.py
config/: default.toml  paper_test.toml
crates/core/: Cargo.toml
crates/core/src/: config.rs  lib.rs  logging.rs
crates/core/src/types/: market_data.rs  mod.rs  order.rs  price.rs  quantity.rs  timestamp.rs
crates/execution/: Cargo.toml
crates/execution/src/: binance_rest.rs  bybit_rest.rs  gateway.rs  lib.rs  rate_limiter.rs  signing.rs
crates/market-data/: Cargo.toml
crates/market-data/benches/: orderbook_bench.rs
crates/market-data/src/: lib.rs  orderbook.rs  ws.rs
crates/market-data/src/binance/: client.rs  mod.rs  types.rs
crates/market-data/src/bybit/: client.rs  mod.rs  types.rs
crates/ml/: Cargo.toml
crates/ml/src/: features.rs  lib.rs  model.rs  normalize.rs  predictor.rs
crates/ml/tests/: smoke.rs
crates/oms/: Cargo.toml
crates/oms/src/: dedup.rs  journal.rs  lib.rs  order.rs  position.rs
crates/pybridge/: Cargo.toml
crates/pybridge/src/: lib.rs  replay.rs  sim_exchange.rs
crates/recorder/: Cargo.toml
crates/recorder/src/: lib.rs  questdb.rs  recorder.rs
crates/risk/: Cargo.toml
crates/risk/src/: circuit_breaker.rs  kill_switch.rs  lib.rs  pipeline.rs
crates/risk/src/checks/: drawdown.rs  fat_finger.rs  max_order.rs  max_position.rs  mod.rs  rate_limit.rs
crates/strategy/: Cargo.toml
crates/strategy/src/: context.rs  lib.rs  loader.rs  traits.rs
crates/strategy/src/strategies/: adaptive_mm.rs  market_making.rs  mod.rs  signals.rs
crates/trading/: Cargo.toml
crates/trading/src/: analyzer.rs  engine.rs  event_loop.rs  lib.rs  main.rs  paper_executor.rs  server.rs  ws_feeds.rs
crates/trading/tests/: analyze_symbol_test.rs  end_to_end.rs  replay_bench.rs  replay_harness.rs  replay_strategy.rs
docs/plans/: 2026-03-05-backtest-testdata.md  2026-03-06-new-symbol-analysis.md  2026-03-09-ethusdt-optimization-followup.md  2026-03-10-regime-detector.md
infra/deploy/compose/: .env.example  docker-compose.override.yml  docker-compose.yml
infra/deploy/docker/: .dockerignore  Dockerfile.backtest  Dockerfile.monitoring  Dockerfile.record  Dockerfile.trading
infra/deploy/k8s/record/: configmap-binance.yaml  configmap-bybit.yaml  configmap.yaml  cronjob-binance.yaml  cronjob-bybit.yaml  cronjob.yaml  secret.yaml
infra/deploy/k8s/trading/: configmap-ethusdt.yaml
infra/deploy/scripts/: record-and-upload.sh
infra/deploy/terraform/: cloudwatch.tf  ec2.tf  iam.tf  main.tf  outputs.tf  s3.tf  security.tf  variables.tf  vpc.tf
infra/monitoring/: go.mod
infra/monitoring/cmd/monitor/: main.go
infra/monitoring/dashboards/: dashboards.yml  exchange.json  latency.json  system.json  trading.json
infra/monitoring/datasources/: datasources.yml
infra/monitoring/internal/collector/: collector.go  collector_test.go
infra/monitoring/internal/health/: checker.go  checker_test.go  health.go  health_test.go  types.go
infra/monitoring/internal/metrics/: metrics.go  metrics_test.go
infra/monitoring/prometheus/: prometheus.yml  recording_rules.yml
infra/scripts/: init-minio.sh
models/: mid_predictor.norm.json  mid_predictor.safetensors  mid_predictor_btc_la5.norm.json  mid_predictor_btc_la5.safetensors  mid_predictor_eth_la5.norm.json  mid_predictor_eth_la5.safetensors  mid_predictor_la1.norm.json  mid_predictor_la1.safetensors  mid_predictor_la10.norm.json  mid_predictor_la10.safetensors  mid_predictor_la100.norm.json  mid_predictor_la100.safetensors  mid_predictor_la20.norm.json  mid_predictor_la20.safetensors  mid_predictor_la3.norm.json  mid_predictor_la3.safetensors
scripts/: record-series.sh
