[workspace]
members = [
    "crates/core",
    "crates/market-data",
    "crates/strategy",
    "crates/oms",
    "crates/risk",
    "crates/execution",
    "crates/recorder",
    "crates/pybridge",
    "crates/trading",
    "crates/ml",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-appender = "0.2"
anyhow = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1", features = ["serde-with-str"] }
crossbeam = "0.8"
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1"

# Internal crates
cm-core = { path = "crates/core" }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

[profile.dev]
opt-level = 0
