[package]
name = "cm-core"
edition.workspace = true
version.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
chrono = { workspace = true }
libc = "0.2"
config = { version = "0.14", features = ["toml"] }

[dev-dependencies]
proptest = { workspace = true }
tempfile = "3"
