[package]
name = "cm-execution"
edition.workspace = true
version.workspace = true

[dependencies]
cm-core = { path = "../core" }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { version = "0.12", features = ["json", "native-tls"] }
ring = "0.17"
hex = "0.4"
url = "2"
chrono = { workspace = true }
parking_lot = "0.12"
async-trait = "0.1"
serde_urlencoded = "0.7"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
