[package]
name = "cm-market-data"
edition.workspace = true
version.workspace = true

[dependencies]
cm-core = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
url = "2"
futures-util = "0.3"
rand = "0.8"
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json", "native-tls"] }

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "orderbook_bench"
harness = false
