[package]
name = "cm-risk"
edition.workspace = true
version.workspace = true

[dependencies]
cm-core = { workspace = true }
cm-oms = { path = "../oms" }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
axum = "0.8"
parking_lot = "0.12"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }
